--- a/client/styles/_landing.sass
+++ b/client/styles/_landing.sass
@@ -14,6 +14,7 @@
 
 .landing__header__buttons
   display: flex
+  flex-wrap: wrap
   .button
     width: 240px
     margin-right: 9px
